@@ -4,7 +4,7 @@
 
 	<groupId>org.openmrs.module</groupId>
 	<artifactId>pihcore</artifactId>
-	<version>1.1.0-SNAPSHOT</version>
+	<version>2.0.0-SNAPSHOT</version>
 	<packaging>pom</packaging>
 	<name>PIH Core Module</name>
 	<description>Core metadata and configuration included in all PIH distributions</description>
@@ -46,7 +46,7 @@
 	</modules>
 
     <properties>
-        <openMRSVersion>2.3.6-SNAPSHOT</openMRSVersion>
+        <openMRSVersion>2.5.4-SNAPSHOT</openMRSVersion>
 
         <addresshierarchyVersion>2.14.2</addresshierarchyVersion>
         <allergyuiVersion>1.8.4</allergyuiVersion>
@@ -56,7 +56,7 @@
         <appuiVersion>1.15.0</appuiVersion>
         <attachmentsVersion>2.6.0</attachmentsVersion>
         <calculationVersion>1.3.0</calculationVersion>
-        <coreappsVersion>1.36.0-SNAPSHOT</coreappsVersion>
+        <coreappsVersion>1.36.0</coreappsVersion>
         <dispensingVersion>1.3.0-SNAPSHOT</dispensingVersion>
         <edtriageappVersion>1.4.0</edtriageappVersion>
         <emrVersion>2.3.0-SNAPSHOT</emrVersion>
@@ -68,7 +68,6 @@
         <htmlwidgetsVersion>1.10.0</htmlwidgetsVersion>
         <growthChartVersion>2.1.0</growthChartVersion>
         <idgenVersion>4.7.0</idgenVersion>
-        <importpatientfromwsVersion>1.0</importpatientfromwsVersion>
         <initializerVersion>2.3.0-SNAPSHOT</initializerVersion>
         <labtrackingappVersion>1.2.0-SNAPSHOT</labtrackingappVersion>
         <labworkflowOwaVersion>1.3.0-SNAPSHOT</labworkflowOwaVersion>
@@ -80,8 +79,8 @@
         <orderEntryOwaVersion>1.2.4</orderEntryOwaVersion>
         <owaVersion>1.13.0</owaVersion>
         <pacsintegrationVersion>1.8.0-SNAPSHOT</pacsintegrationVersion>
-        <paperrecordVersion>1.3.0</paperrecordVersion>
-        <printerVersion>1.4.0</printerVersion>
+        <paperrecordVersion>1.4.0-SNAPSHOT</paperrecordVersion>
+        <printerVersion>1.5.0-SNAPSHOT</printerVersion>
         <providermanagementVersion>2.13.0</providermanagementVersion>
         <radiologyappVersion>1.6.0-SNAPSHOT</radiologyappVersion>
         <registrationappVersion>1.25.0-SNAPSHOT</registrationappVersion>
@@ -95,7 +94,7 @@
         <uicommonsVersion>2.20.0-SNAPSHOT</uicommonsVersion>
         <uiframeworkVersion>3.22.1</uiframeworkVersion>
         <uilibraryVersion>2.0.7</uilibraryVersion>
-        <webservicesRestVersion>2.30.0-SNAPSHOT</webservicesRestVersion>
+        <webservicesRestVersion>2.36.0</webservicesRestVersion>
 
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
@@ -295,13 +294,6 @@
             <groupId>org.openmrs.module</groupId>
             <artifactId>idgen-api</artifactId>
             <version>${idgenVersion}</version>
-            <scope>provided</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>org.openmrs.module</groupId>
-            <artifactId>importpatientfromws-api</artifactId>
-            <version>${importpatientfromwsVersion}</version>
             <scope>provided</scope>
         </dependency>
 
@@ -548,6 +540,15 @@
 
         <!-- end dependencies for Zebra ZXP Series 3 API -->
 
+        <!-- Required for import patient from ws -->
+
+        <dependency>
+            <groupId>com.sun.jersey</groupId>
+            <artifactId>jersey-client</artifactId>
+            <version>1.17.1</version>
+            <scope>compile</scope>
+        </dependency>
+
         <!-- Begin OpenMRS contrib -->
 
         <dependency>
@@ -621,11 +622,8 @@
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-surefire-plugin</artifactId>
-					<version>2.17</version>
+                    <version>3.0.0-M5</version>
 					<configuration>
-                        <runOrder>alphabetical</runOrder>
-                        <!-- see: https://stackoverflow.com/questions/53010200/maven-surefire-could-not-find-forkedbooter-class -->
-						<argLine>-Xmx2048m -Xms2048m -XX:MaxPermSize=512m -Djdk.net.URLClassPath.disableClassPathURLCheck=true</argLine>
 						<includes>
 							<include>**/*Test.java</include>
 						</includes>
